Add binary body to spec & update mock apis
